<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNumero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblNumero1" />

    <EditText
        android:id="@+id/edtNumero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNumero1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/HintEdtNumero1"
        android:ems="10"
        android:hint="@string/HintEdtNumero1"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvNumero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNumero1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/lblNumero2" />

    <EditText
        android:id="@+id/edtNumero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNumero2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/HintEdtNumero2"
        android:ems="10"
        android:hint="@string/HintEdtNumero2"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/rBtnGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNumero2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/rBtnSumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/lblRBtnSumar" />

        <RadioButton
            android:id="@+id/rBtnRestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblRBtnRestar" />

        <RadioButton
            android:id="@+id/rBtnMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblRBtnMultiplicar" />

        <RadioButton
            android:id="@+id/rBtnDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblRBtnDividir" />
    </RadioGroup>

    <Button
        android:id="@+id/btnDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rBtnGrupo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:text="@string/lblBtnDo" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp" />

</RelativeLayout>